@@ -19,11 +19,12 @@ struct Spacing_options
   bool packed_;
   bool stretch_uniformly_;
   bool float_nonmusical_columns_;
+  bool float_grace_columns_;
   Rational global_shortest_;
   Real increment_;
   Real shortest_duration_space_;
 
-  void init ();
+  Spacing_options();
   void init_from_grob (Grob *me);
   Real get_duration_space (Moment d, bool *) const;
 };
